--- a/index.css
+++ b/index.css
@@ -140,12 +140,64 @@ body {
 .productionList {
     border: 1px solid white;
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.productionList img {
+.productionList div {
     width: 40px;
-    padding: 3px 0 0 3px;
+    padding-left: 5px;
+    padding-top: 5px;
+}
+
+.productionList div img {
+    width: 100%;
+}
+
+.productionList div progress {
+    width: 100%;
+}
+
+/* ######### */
+/* INVENTORY */
+/* ######### */
+
+.elementInventory {
+    border: 1px solid white;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    border-radius: 10px;
+}
+
+.elementInventoryItem {
+    padding: 5px 3px 3px 3px;
+    text-align: center;
+    width: 80px;
+    z-index: 2;
+}
+
+.elementInventoryItem img {
+    width: 80px;
+}
+
+.elementInventoryItem p {
+    padding: 0;
     margin: 0;
+}
+
+.elementInventoryItem button {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.elementBuyPercentageContainer {
+    display: flex;
+}
+
+.elementBuyPercentageContainer input {
+    width: 350px;
 }
 
 /* ##### */
