--- a/index.css
+++ b/index.css
@@ -1,6 +1,17 @@
+/* VARIABLES */
+:root {
+    --green-accent: rgb(0,165,0);
+    
+}
+
 /* ###### */
 /* GLOBAL */
 /* ###### */
+
+#loading {
+    width: 100%;
+    text-align: center;
+}
 
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -35,6 +46,10 @@ body {
     padding-left: 26px;
     background-color: #222;
     transition: 0.6s cubic-bezier(.17,.67,.56,.99);
+}
+
+.sidenav div:last-child {
+    border-bottom-right-radius: 10px;
 }
 
 .pageHeader {
@@ -86,6 +101,37 @@ body {
 /* SETTINGS */
 /* ######## */
 
+.settingsBody {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.settingsItem {
+    height: 80px;
+    width: 100%;
+    border-radius: 6px;
+    border: 1px solid var(--green-accent);
+    margin-bottom: 10px;
+    transition: 200ms;
+}
+
+.settingsItem:hover {
+    background-color: var(--green-accent);
+    transition: 200ms;
+}
+
+
+/* individual settings items */
+
+#importSaveFromText input {
+    width: 65%;
+}
+
+#importSaveFromText button {
+    width: 20%;
+    padding: 0 2px 0 0;
+}
 
 
 /* ######## */
