--- a/index.css
+++ b/index.css
@@ -1,12 +1,32 @@
 /* VARIABLES */
 :root {
     --green-accent: rgb(0,165,0);
-    
+    --default-border-radius: 6px;
 }
 
 /* ###### */
 /* GLOBAL */
 /* ###### */
+
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #252525;
+    border-top-right-radius: 6px; 
+    border-bottom-right-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #5f0000; 
+    border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #750000; 
+}
 
 #loading {
     width: 100%;
@@ -93,9 +113,34 @@ body {
 /* HOME */
 /* #### */
 
-.homePage {
+.homePageStuff {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.homePagePreviewItem {
+    height: 400px; 
+    width: 45%;
+    border-radius: var(--default-border-radius);
+    border: 1px solid white;
+    margin: 10px 5px 10px 5px;
+    overflow: auto;
+}
+
+.homePagePreviewItem p {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.homePagePreviewItem h2 {
     text-align: center;
 }
+
+.break {
+    flex-basis: 100%;
+    height: 0;
+  }
 
 /* ######## */
 /* SETTINGS */
@@ -110,7 +155,7 @@ body {
 .settingsItem {
     height: 80px;
     width: 100%;
-    border-radius: 6px;
+    border-radius: var(--default-border-radius);
     border: 1px solid var(--green-accent);
     margin-bottom: 10px;
     transition: 200ms;
@@ -141,6 +186,7 @@ body {
 .craftingBondPreview {
     width: 84%;
     border: 1px solid white;
+    border-radius: var(--default-border-radius);
     height: 40px;
     display: flex;
 }
@@ -187,6 +233,7 @@ body {
 
 .productionList {
     border: 1px solid white;
+    border-radius: var(--default-border-radius);
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -268,25 +315,4 @@ body {
 #elementBuyPercentageSlider {
     width: 100%;
     margin: 0;
-}
-
-/* ##### */
-/* ABOUT */
-/* ##### */
-
-.aboutHeader {
-    text-align: center;
-}
-
-.aboutText {
-    font-size: 14px;
-}
-
-.aboutText a {
-    text-decoration: none;
-    color: red;
-}
-
-.aboutText a:hover {
-    color: rgb(255, 72, 72);
 }
